visual/static/css/moreco.css
/*changes the select box text */
.param-item{
  font-weight: bold;
}
.transfer-double-header {
  background-color: #1E90FF;
}

.transfer-double-list-header {
  background-color: lightblue;
  background-image: linear-gradient( lightblue, white)
}

.transfer-double-selected-list-header {
  background-color: lightblue;
  background-image: linear-gradient( lightblue, white)
}


.transfer-double-content-left{
  background-color: lightblue;
  background-image: linear-gradient( lightblue, white)
}

.transfer-double-content-right{
  background-color: lightblue;
  background-image: linear-gradient( lightblue, white)
}

.transfer-double-content.clearfix {
  background-color: blue;
  background-image: linear-gradient(#1E90FF, lightblue)
}

.transfer-double-footer{
   background-color: lightblue;
}


/*fixes sizing issue with background picture*/

body {

  background-image: url("/static/images/background.jpg");
  background-color: #cccccc;
  height: 100%;

  background-position: center;

  background-repeat: no-repeat;

  background-size: cover;
}

#logo {
  content: url("/static/images/moreco_logo.png");
  position: absolute;
  left: 50px;
  z-index: 1000;
  height: 100px;
  width: 300px;
}


#trailer {
  position: absolute;
  top: 615px;
  left: 75px;
}

#toggleinstructions {
  position: absolute;
  top: 570px;
  left: 75px;
}

#toggle_text {
  position: absolute;
  top: 565px;
  left: 95px;
  font-size: 18px;
  color: black;
}

#instruction1 {
  position: absolute;
  top: 615px;
  left: 75px;
  font-size: 18px;
  color: black;
}
#instruction2 {
  position: absolute;
  top: 645px;
  left: 75px;
  font-size: 18px;
  color: black;
}
#instruction3 {
  position: absolute;
  top: 675px;
  left: 75px;
  font-size: 18px;
  color: black;
}

#tagchart {
    position: absolute;
    margin-top: 40px;
    top: 600px;
    left:700px;
    z-index: -2;
}

select {
  margin-left: 60px;
}
  
.transfer-demo {
  width: 1300px;
  height: 400px;
  margin: 0 auto;
  position: absolute;
  left: 50px;
  top: 100px;
}

input[name=findmovie_button] {
  font-size:24px;
  left:200px;
  width:400px;
  height:50px;
  position: absolute;
  top:500px;
}


.label {
  font-size: 20px;
}

.tooltip {	
  position: absolute;		
  color: white;	
  text-align: left;			
  width: 200px;					
  height: 20px;					
  padding: 2px;				
  font: 12px sans-serif;		
  background: black;	
  border: 0px;		
  border-radius: 20px;			
  pointer-events: none;			
  z-index: 50;
}

#main {
  float: left;
  width: 750px;
}

#sidebar {
  position: absolute;
  float: right;
  width: 100px;
  left: 1250px;
  top: 100px;
}

#sequence {
  position: absolute;
  width: 500px;
  height: 70px;
  left: 700px;
  top: 600px;
}

#legend {
  padding: 10px 0 0 3px;
}

#sequence text {
  font-weight: 600;
  fill: #fff;
}

#legend text {
  font-weight: 600;
  fill: #fff;
}

#chart {
  position: relative;
  left:730px;
  top:70px;
}

#chart path {
  stroke: #fff;
}

#poster_in_circle {
  position: absolute;
  top: 160px;
  left: 190px;
  width: 120px;
  text-align: center;
  color: black;
  z-index: -1;
}

#movie_title {
  position: absolute;
  top: 250px;
  left: 190px;
  width: 120px;
  text-align: center;
  color: white;
  z-index: 2;
  font-size: 25px;
  text-shadow: 2px 2px black;
  font-weight: bold
}

